# CFEES-Neural-SDEs

./: README.md  pyproject.toml
configs/spd/: nsde.toml
data/cache/: 80f24bd661f8efa4.parquet
datasets/spd/: dataset.py  download.py  preprocessing.py
experiment/: config.py  factories.py  losses.py  train.py
models/: nsde.py
results/: plots.py  spd_frechet_mean.py
results/nsde_run/: chart_base.npy  history.json  metrics.json  nsde.eqx  test_predictions.npz
